cmake_minimum_required(VERSION 3.12)

project(AdventOfCode VERSION 1.0.0)


set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")

set(CMAKE_CXX_STANDARD 14)
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
set(CMAKE_BUILD_TYPE Debug ... FORCE)
set(CMAKE_CXX_FLAGS "-fPIC -pthread" CACHE STRING "" FORCE)
#set(CMAKE_C_FLAGS "-fPIC -pthread -std=gnu99 -fPIC -W" CACHE STRING "" FORCE)
add_subdirectory(src)
