add_executable(Day1_Part1 Day1_Part1.cpp)
add_executable(Day1_Part2 Day1_Part2.cpp)
add_executable(Day2_Part1 Day2_Part1.cpp)
#add_executable(Day2_Part2 Day2_Part2.cpp)
add_executable(Day3_Part1 Day3_Part1.cpp)
add_executable(Day3_Part2 Day3_Part2.cpp)
add_executable(Day4_Part1 Day4_Part1.cpp)
add_executable(Day5 Day5.cpp)
add_executable(Day5_Part2 Day5_Part2.cpp)
add_executable(Day6 Day6.cpp)
add_executable(Day6_Part2 Day6_Part2.cpp)
add_executable(Day7_Part1 Day7_Part1.cpp)
add_executable(Day7_Part2 Day7_Part2.cpp)
add_executable(Day8_Part1 Day8_Part1.cpp)
add_executable(Day8_Part2 Day8_Part2.cpp)
add_executable(Day9_Part1 Day9_Part1.cpp)
add_executable(Day10_Part1 Day10_Part1.cpp)
add_executable(Day11_Part1 Day11_Part1.cpp)
add_executable(Day11_Part2 Day11_Part2.cpp)
add_executable(Day12_Part1 Day12_Part1.cpp)
add_executable(Day12_Part2 Day12_Part2.cpp)
add_executable(Day13_Part1 Day13_Part1.cpp)
add_executable(Day13_Part2 Day13_Part2.cpp)
add_executable(Day14_Part1 Day14_Part1.cpp)
add_executable(Day14_Part2 Day14_Part2.cpp)
add_executable(Day15_Part1 Day15_Part1.cpp)