cmake_minimum_required (VERSION 3.11)

# Project name
project(AdventOfCode VERSION 1.0.0)

add_executable(Day1_Part1 Day1_Part1.cpp)
add_executable(Day1_Part2 Day1_Part2.cpp)
add_executable(Day2_Part1 Day2_Part1.cpp)
add_executable(Day2_Part2 Day2_Part2.cpp)
add_executable(Day3_Part1 Day3_Part1.cpp)
add_executable(Day3_Part2 Day3_Part2.cpp)
add_executable(Day4 Day4.cpp)
add_executable(Day5_Part1 Day5_Part1.cpp)
add_executable(Day5_Part2 Day5_Part2.cpp)
add_executable(Day6_Part1 Day6_Part1.cpp)
add_executable(Day6_Part2 Day6_Part2.cpp)
